# rocPyDecode

./: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  rocPyDecode-requirements.py  setup.py
.jenkins/: common.groovy  precheckin.groovy
cmake/: Findpybind11.cmake  FindrocDecode.cmake
conda-recipe/: README.md  meta.yaml
docs/: conf.py  index.rst
docs/conceptual/: rocPyDecode-mem-types.rst
docs/how-to/: using-rocPydecode.rst
docs/install/: install.rst  rocPyDecode-cmake-install.rst  rocPyDecode-install.rst  rocPyDecode-pip-install.rst  rocPyDecode-prerequisites.rst
docs/reference/: decoderClass.rst  demuxerClass.rst  rocPyDecode-codecs-and-hardware.rst  structures.rst
docs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
pyRocVideoDecode/: decoder.py  decodercpu.py  demuxer.py  types.py
samples/: CMakeLists.txt  README.md  videodecode.py  videodecode_cpu_backend.py  videodecode_mpi.py  videodecodetorch_cpu_backend.py
samples/jupyter_notebooks/: videodecode.ipynb
src/: roc_pybuffer.cpp  roc_pybuffer.h  roc_pydecode.cpp  roc_pydecode.h  roc_pyvideodecode.cpp  roc_pyvideodecode.h  roc_pyvideodecodecpu.cpp  roc_pyvideodecodecpu.h
tests/: CMakeLists.txt  decoder_test.py  decodercpu_test.py  demuxer_test.py  types_test.py
